syntax = "proto3";

package manabie.bob;

import "enum.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_registration) = true;
option go_package = "github.com/manabie-com/backend/pkg/genproto/bob;pb";

message City {
  int32 id = 1;
  string name = 2;
  Country country = 3;
}

message RetrieveCitiesRequest { Country country = 1; }

message RetrieveCitiesResponse { repeated City cities = 1; }

message District {
  int32 id = 1;
  string name = 2;
  Country country = 3;
  City city = 4;
}

message RetrieveDistrictsRequest {
  Country country = 1;
  int32 city_id = 2;
}

message RetrieveDistrictsResponse { repeated District districts = 1; }

message Point {
  double lat = 1;
  double long = 2;
}
